crates/sui-adapter-transactional-tests/tests/programmable_transaction_examples/coin_limit.exp
processed 11 tasks

init:
A: object(0,0)

task 1 'publish'. lines 6-28:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpIV9BJw:12:19
   │
12 │     use sui::bfc::BFC;
   │                   ^^^ Unused 'use' of alias 'BFC'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpIV9BJw:14:42
   │
14 │     public entry fun purchase(coin: Coin<OBC>, ctx: &mut TxContext) {
   │                                          ^^^ Unbound type 'OBC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpIV9BJw:17:37
   │
17 │     public fun purchase_(coin: Coin<OBC>, ctx: &mut TxContext): CoolMarker {
   │                                     ^^^ Unbound type 'OBC' in current scope



task 2 'programmable'. lines 29-32:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 34-34:
Error: task 3, lines 34-34. Unbound fake id 2,0

task 4 'view-object'. lines 36-38:
Error: task 4, lines 36-36. Unbound fake id 2,1

task 5 'programmable'. lines 39-44:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 6 'programmable'. lines 45-50:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 7 'view-object'. lines 52-52:
Error: task 7, lines 52-52. Unbound fake id 6,0

task 8 'view-object'. lines 54-54:
Error: task 8, lines 54-54. Unbound fake id 6,1

task 9 'view-object'. lines 56-56:
Error: task 9, lines 56-56. Unbound fake id 6,2

task 10 'view-object'. lines 58-58:
Error: task 10, lines 58-58. Unbound fake id 6,3
